dark mode and bug fixes

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ code {
 }
 
 a { -webkit-tap-highlight-color: rgba(0,0,0,0); }
+.theme { -webkit-tap-highlight-color: rgba(0,0,0,0); }
 
 @layer components {
   .nav-link {
